# pass-tui

./: Cargo.toml  README.md
src/: app.rs  lib.rs  main.rs  store.rs  ui.rs
src/backend/: mod.rs
tests/: backend_pass.rs
