[package]
name = "pass-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ratatui = "0.26"
crossterm = "0.27"
walkdir = "2.5"
clap = { version = "4.5", features = ["derive"] }
dirs-next = "2.0"

[dev-dependencies]
assert_fs = "1.1"
predicates = "3.1"
tempfile = "3.10"

[lib]
name = "pass_tui"
path = "src/lib.rs"
